--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^10.12.2",
+    "framer-motion": "^11.3.12",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
     "mercadopago": "^2.0.9",
@@ -74,3 +75,5 @@
     "typescript": "^5"
   }
 }
+
+    
