--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "resend": "^3.5.0",
     "swiper": "^11.1.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
@@ -75,5 +76,3 @@
     "typescript": "^5"
   }
 }
-
-    
