--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^10.12.3",
     "framer-motion": "^11.3.12",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
