--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
+    "genkit:dev": "genkit start -- tsx ai-dev/dev.ts",
+    "genkit:watch": "genkit start -- tsx --watch ai-dev/dev.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
