Error: Configuring Next.js via 'next.config.ts' is not supported. Please

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
+    "dev": "next dev -p 9002",
     "genkit:dev": "genkit start -- tsx ai-dev/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch ai-dev/dev.ts",
     "build": "next build",
@@ -50,13 +50,13 @@
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
     "mercadopago": "^2.0.9",
-    "next": "15.3.3",
+    "next": "14.2.5",
     "next-qrcode": "^2.5.1",
     "nodemailer": "^6.9.14",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "swiper": "^11.1.4",
