--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "1.0.0",
-    "@genkit-ai/next": "1.0.0",
+    "@genkit-ai/googleai": "^1.0.0",
+    "@genkit-ai/next": "^1.0.0",
     "@hookform/resolvers": "^4.1.3",
     "@mercadopago/sdk-react": "^0.0.19",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -46,7 +46,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^10.12.3",
     "framer-motion": "^11.3.12",
-    "genkit": "1.0.0",
+    "genkit": "^1.0.0",
     "lucide-react": "^0.475.0",
     "mercadopago": "^2.0.9",
     "next": "14.2.5",
@@ -70,7 +70,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "genkit-cli": "1.0.0",
+    "genkit-cli": "^1.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
