--- a/package.json
+++ b/package.json
@@ -49,12 +49,13 @@
     "genkit": "1.14.1",
     "lucide-react": "^0.475.0",
     "mercadopago": "^2.0.9",
-    "next": "14.2.5",
+    "next": "15.0.0",
     "next-qrcode": "^2.5.1",
     "nodemailer": "^6.9.14",
     "patch-package": "^8.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0-rc-65a56d0e-20241020",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "swiper": "^11.1.4",
@@ -74,5 +75,10 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-day-picker": {
+      "react": "$react"
+    }
   }
 }
