--- a/package.json
+++ b/package.json
@@ -12,102 +12,71 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "1.14.1",
-    "@genkit-ai/next": "1.14.1",
-    "@hookform/resolvers": "^4.1.3",
+    "@genkit-ai/googleai": "^1.14.1",
+    "@genkit-ai/next": "^1.14.1",
+    "@hookform/resolvers": "^3.9.0",
     "@mercadopago/sdk-react": "^0.0.19",
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-alert-dialog": "^1.1.6",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-menubar": "^1.1.6",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-scroll-area": "^1.2.3",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slider": "^1.2.3",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toast": "^1.2.6",
-    "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.1",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tiptap/pm": "^2.5.5",
     "@tiptap/react": "^2.5.5",
     "@tiptap/starter-kit": "^2.5.5",
-    "class-variance-authority": "^0.7.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.6.0",
+    "embla-carousel-react": "^8.1.7",
     "firebase": "^10.12.3",
     "framer-motion": "^11.3.12",
-    "genkit": "1.14.1",
-    "lucide-react": "^0.475.0",
+    "genkit": "^1.14.1",
+    "lucide-react": "0.417.0",
     "mercadopago": "^2.0.9",
-    "next": "15.0.0",
+    "next": "14.2.5",
     "next-qrcode": "^2.5.1",
     "nodemailer": "^6.9.14",
     "patch-package": "^8.0.0",
-    "react": "19.0.0-rc-65a56d0e-20241020",
+    "react": "^18",
     "react-day-picker": "8.10.1",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "react-hook-form": "^7.54.2",
-    "recharts": "^2.15.1",
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
+    "recharts": "^2.12.7",
     "swiper": "^11.1.4",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "wav": "^1.0.2",
-    "zod": "^3.24.2"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "@types/mercadopago": "^1.5.11",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "genkit-cli": "1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "overrides": {
-    "react-day-picker": {
-      "react": "$react"
-    },
-    "@mercadopago/sdk-react": {
-      "react": "$react",
-      "react-dom": "$react-dom"
-    },
-    "@tiptap/pm": {
-      "react": "$react",
-      "react-dom": "$react-dom"
-    },
-    "@tiptap/react": {
-      "react": "$react",
-      "react-dom": "$react-dom"
-    },
-    "@tiptap/starter-kit": {
-      "react": "$react",
-      "react-dom": "$react-dom"
-    },
-    "framer-motion": {
-      "react": "$react",
-      "react-dom": "$react-dom"
-    },
-    "lucide-react": {
-      "react": "$react"
-    },
-    "next-qrcode": {
-      "react": "$react"
-    },
-    "react-hook-form": {
-      "react": "$react"
-    }
+  "resolutions": {
+    "react": "18.3.1"
   }
 }
