--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "firebase": "^10.12.3",
     "framer-motion": "^11.3.12",
     "genkit": "^1.14.1",
+    "lucide-react": "0.417.0",
     "mercadopago": "^2.0.9",
     "next": "15.3.3",
     "next-qrcode": "^2.5.1",
